--- a/lab1/mainwindow.ui
+++ b/lab1/mainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>计算器</string>
+   <string>计算器-方冰玉-2023414290410</string>
   </property>
   <property name="styleSheet">
    <string notr="true">QPushButton{
