--- a/lab3/patienteditview.ui
+++ b/lab3/patienteditview.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>341</width>
-    <height>293</height>
+    <width>352</width>
+    <height>325</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -46,6 +46,48 @@
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <layout class="QGridLayout" name="gridLayout">
+         <item row="0" column="1">
+          <layout class="QVBoxLayout" name="verticalLayout_4">
+           <item>
+            <widget class="QLineEdit" name="dbEditID"/>
+           </item>
+           <item>
+            <widget class="QLineEdit" name="dbEditName"/>
+           </item>
+           <item>
+            <widget class="QLineEdit" name="dbEditIDCard"/>
+           </item>
+           <item>
+            <widget class="QComboBox" name="dbComboSex">
+             <item>
+              <property name="text">
+               <string>男</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>女</string>
+              </property>
+             </item>
+            </widget>
+           </item>
+           <item>
+            <widget class="QDateEdit" name="dbDateEditDOB"/>
+           </item>
+           <item>
+            <widget class="QSpinBox" name="dbSpinHeight"/>
+           </item>
+           <item>
+            <widget class="QSpinBox" name="dbSpinWeight"/>
+           </item>
+           <item>
+            <widget class="QLineEdit" name="dbEditMobile"/>
+           </item>
+           <item>
+            <widget class="QLineEdit" name="dbCreatedTimeStamp"/>
+           </item>
+          </layout>
+         </item>
          <item row="0" column="0">
           <layout class="QVBoxLayout" name="verticalLayout">
            <item>
@@ -128,33 +170,15 @@
              </property>
             </widget>
            </item>
-          </layout>
-         </item>
-         <item row="0" column="1">
-          <layout class="QVBoxLayout" name="verticalLayout_4">
            <item>
-            <widget class="QLineEdit" name="lineEdit"/>
-           </item>
-           <item>
-            <widget class="QLineEdit" name="lineEdit_2"/>
-           </item>
-           <item>
-            <widget class="QLineEdit" name="lineEdit_3"/>
-           </item>
-           <item>
-            <widget class="QComboBox" name="comboBox"/>
-           </item>
-           <item>
-            <widget class="QDateEdit" name="dateEdit"/>
-           </item>
-           <item>
-            <widget class="QSpinBox" name="spinBox"/>
-           </item>
-           <item>
-            <widget class="QSpinBox" name="spinBox_2"/>
-           </item>
-           <item>
-            <widget class="QLineEdit" name="lineEdit_4"/>
+            <widget class="QLabel" name="label_9">
+             <property name="text">
+              <string>创建时间：</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
+             </property>
+            </widget>
            </item>
           </layout>
          </item>
@@ -178,14 +202,14 @@
             </spacer>
            </item>
            <item>
-            <widget class="QPushButton" name="pushButton">
+            <widget class="QPushButton" name="btSave">
              <property name="text">
               <string>保存</string>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QPushButton" name="pushButton_2">
+            <widget class="QPushButton" name="btCancel">
              <property name="text">
               <string>取消</string>
              </property>
