--- a/lab3/res.qrc
+++ b/lab3/res.qrc
@@ -1,7 +1,10 @@
 <RCC>
     <qresource prefix="/">
+        <file>images/add.png</file>
         <file>images/back.png</file>
-        <file>images/login.png</file>
+        <file>images/delete.png</file>
         <file>images/logout.png</file>
+        <file>images/search.png</file>
+        <file>images/update.png</file>
     </qresource>
 </RCC>
