--- a/lab4/ChatClient/mainwindow.ui
+++ b/lab4/ChatClient/mainwindow.ui
@@ -152,7 +152,11 @@ border-radius: 25px;
               </widget>
              </item>
              <item row="0" column="1">
-              <widget class="QLineEdit" name="serverEdit"/>
+              <widget class="QLineEdit" name="serverEdit">
+               <property name="text">
+                <string>127.0.0.1</string>
+               </property>
+              </widget>
              </item>
              <item row="1" column="0">
               <widget class="QLabel" name="label_3">
@@ -162,7 +166,11 @@ border-radius: 25px;
               </widget>
              </item>
              <item row="1" column="1">
-              <widget class="QLineEdit" name="usernameEdit"/>
+              <widget class="QLineEdit" name="usernameEdit">
+               <property name="text">
+                <string>vfang</string>
+               </property>
+              </widget>
              </item>
             </layout>
            </item>
@@ -185,8 +193,7 @@ border-radius: 25px;
            <item>
             <widget class="QPushButton" name="loginButton">
              <property name="styleSheet">
-              <string notr="true">
-</string>
+              <string notr="true"/>
              </property>
              <property name="text">
               <string>登录聊天室</string>
