--- a/lab4/ChatClient/mainwindow.ui
+++ b/lab4/ChatClient/mainwindow.ui
@@ -44,7 +44,7 @@ border-radius: 25px;
 }</string>
       </property>
       <property name="text">
-       <string>方冰玉的聊天室</string>
+       <string>方冰玉的聊天室（2023414290410）</string>
       </property>
      </widget>
     </item>
